k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gider-app
  namespace: home
spec:
  selector:
    app: gider-app
  ports:
    - port: 80
      targetPort: 3000
